integrating user registration API

--- a/shop.html
+++ b/shop.html
@@ -341,8 +341,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -358,7 +358,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                               <!-- WRITE JAVASCRIPT FOR ADD TO CART FUNCTION-->
 
@@ -374,8 +374,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -391,7 +391,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                               <!-- WRITE JAVASCRIPT FOR ADD TO CART FUNCTION-->
                               
@@ -407,8 +407,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -424,7 +424,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                             <button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
@@ -438,8 +438,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -455,7 +455,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                             <button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
@@ -469,8 +469,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -486,7 +486,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                             <button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
@@ -500,8 +500,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -517,7 +517,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                             <button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
@@ -531,8 +531,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -548,7 +548,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                             <button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
@@ -562,8 +562,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -579,7 +579,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                             <button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
@@ -593,8 +593,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -610,7 +610,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                             <button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
@@ -624,8 +624,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -641,7 +641,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                             <button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
@@ -655,8 +655,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -672,7 +672,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                             <button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
@@ -686,8 +686,8 @@
                           </div>
                           <div class="product-info_block">
                             <h5 class="product-type">Oranges</h5><a class="product-name" href="shop__detail.html">Pure Pineapple</a>
-                            <h3 class="product-price">#14.00 
-                              <del>#35.00</del>
+                            <h3 class="product-price">NGR 14.00 
+                              <del>NGR 35.00</del>
                             </h3>
                             <h5 class="product-rated"><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star-half"></i><span>(5)</span></h5>
                             <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor niam</p>
@@ -703,7 +703,7 @@
                           <div class="product-select_list">
                             <p class="delivery-status">Free delivery</p>
                             <h3 class="product-price"> 
-                              <del>#35.00</del>#14.00
+                              <del>NGR 35.00</del>NGR 14.00
                             </h3>
                             <button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
