--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -52,7 +52,7 @@
           <div class="container">
             <div class="row">
               <div class="col-3">
-                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="NGR "><i class="fas fa-bars"></i></a>
+                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="#"><i class="fas fa-bars"></i></a>
                   <div id="ogami-mobile-menu">
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
@@ -91,7 +91,7 @@
                             <li><a href="blog_detail_sidebar.html">Blog detail sidebar</a></li>
                           </ul>
                         </li>
-                        <li class="toggleable"><a class="menu-item" href="NGR ">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"><a class="menu-item" href="#">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="login.html">login</a></li>
                             <li><a href="register.html">register</a></li>
@@ -183,7 +183,7 @@
                       </ul>
                     </li>
                     
-                    <li class="toggleable"> <a class="menu-item" href="NGR ">Pages</a>
+                    <li class="toggleable"> <a class="menu-item" href="#">Pages</a>
                       <ul class="sub-menu">
                         <li><a href="login.html">login</a></li>
                         <li><a href="register.html">register</a></li>
@@ -298,9 +298,9 @@
                     <div class="shop-detail_more-info">
                       <div id="tab-so3">
                         <ul class="mb-0">
-                          <li class="active"><a href="NGR tab-1">DESCRIPTION</a></li>
-                          <li><a href="NGR tab-2">SPECIFICATIONS</a></li>
-                          <li> <a href="NGR tab-3">Customer Reviews (02)</a></li>
+                          <li class="active"><a href="#tab-1">DESCRIPTION</a></li>
+                          <li><a href="#tab-2">SPECIFICATIONS</a></li>
+                          <li> <a href="#tab-3">Customer Reviews (02)</a></li>
                         </ul>
                         <div id="tab-1">
                           <div class="description-block">
