--- a/login.html
+++ b/login.html
@@ -172,7 +172,7 @@
           <div class="row">
             <div class="col-12 col-md-6 mx-auto">
               <h1 class="title">Login</h1>
-              <form id="form" method="post" action="index.html">
+              <form id="form" method="post" action="/index.html">
                 <label for="user-name">Username or email address *</label>
                 <input class="no-round-input" id="email" type="email" name="email">
                 <label for="password">Password *</label>
@@ -185,7 +185,7 @@
                   <div class="account-forgot"><a href="#">Forget your Password</a></div>
                 </div>
                 <div class="account-function">
-                  <button class="no-round-btn" type="submit">Sign in</button><a class="create-account" href="register.html">Or create an account</a>
+                  <a href="/index.html"><button class="no-round-btn" type="submit">Sign in</button></a><a class="create-account" href="register.html">Or create an account</a>
                 </div>
               </form>
             </div>
