--- a/FAQ.html
+++ b/FAQ.html
@@ -117,11 +117,7 @@
                       <ul class="mb-0 d-flex flex-column">
                         <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
-                            <li><a href="index.html">Homepage 1</a></li>
-                            <li><a href="homepage02.html">Homepage 2</a></li>
-                            <li><a href="homepage03.html">Homepage 3</a></li>
-                            <li><a href="homepage04.html">Homepage 4</a></li>
-                            <li><a href="homepage05.html">Homepage 5</a></li>
+                            <li><a href="index.html">Homepage</a></li>
                           </ul>
                         </li>
                         <li class="toggleable"><a class="menu-item" href="shop.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
