--- a/404_error.html
+++ b/404_error.html
@@ -58,22 +58,13 @@
                   <ul class="mb-0">
                     <li class="toggleable"> <a class="menu-item" href="index.html">Home</a>
                       <ul class="sub-menu">
-                        <li><a href="index.html">Homepage 1</a></li>
-                        <li><a href="homepage02.html">Homepage 2</a></li>
-                        <li><a href="homepage03.html">Homepage 3</a></li>
-                        <li><a href="homepage04.html">Homepage 4</a></li>
-                        <li><a href="homepage05.html">Homepage 5</a></li>
+                        <li><a href="index.html">Homepage</a></li>
                       </ul>
                     </li>
                     <li class="toggleable"> <a class="menu-item" href="shop.html">Shop</a>
                       <ul class="sub-menu shop d-flex">
                         <div class="nav-column">
-                          <h2>Layout shop</h2>
-                          <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
-                          <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                          <li><a href="shop.html">shop grid 3 column</a></li>
-                          <li><a href="shop.html">shop list 3 column</a></li>
-                        </div>
+                         </div>
                         <div class="nav-column">
                           <h2>Detail shop</h2>
                           <li><a href="shop_detail_fullwidth.html">shop detail fullwidth</a></li>
