--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -59,37 +59,14 @@
                       <ul class="mb-0 d-flex flex-column">
                         <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
-                            <li><a href="index.html">Homepage 1</a></li>
-                            <li><a href="homepage02.html">Homepage 2</a></li>
-                            <li><a href="homepage03.html">Homepage 3</a></li>
-                            <li><a href="homepage04.html">Homepage 4</a></li>
-                            <li><a href="homepage05.html">Homepage 5</a></li>
+                            <li><a href="index.html">Homepage</a></li>
                           </ul>
                         </li>
                         <li class="toggleable"><a class="menu-item" href="shop.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
-                          <ul class="sub-menu">
-                            <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
-                            <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                            <li><a href="shop.html">shop grid 3 column</a></li>
-                            <li><a href="shop.html">shop list 3 column</a></li>
-                            <li><a href="shop_detail.html">shop detail</a></li>
-                            <li><a href="shop_detail_fullwidth.html">shop detail</a></li>
-                            <li><a href="shop_checkout.html">checkout</a></li>
-                            <li><a href="shop_order_complete.html">order complete</a></li>
-                            <li><a href="shop_wishlist.html">wishlist</a></li>
-                            <li><a href="shop_compare.html">compare</a></li>
-                            <li><a href="shop_cart.html">cart</a></li>
-                          </ul>
+                         
                         </li>
                         <li class="toggleable"> <a class="menu-item" href="blog_list_sidebar.html">Blog</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
-                          <ul class="sub-menu">
-                            <li><a href="blog_list_sidebar.html">Blog List Sidebar</a></li>
-                            <li><a href="blog_grid_2col.html">Blog Grid 2 column</a></li>
-                            <li><a href="blog_grid_sidebar.html">Blog Grid sidebar</a></li>
-                            <li><a href="blog_masonry.html">Blog masonry</a></li>
-                            <li><a href="blog_grid_1col.html">Blog Grid 1 column sidebar</a></li>
-                            <li><a href="blog_detail_sidebar.html">Blog detail sidebar</a></li>
-                          </ul>
+                         
                         </li>
                         <li class="toggleable"><a class="menu-item" href="#">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
@@ -235,7 +212,12 @@
                         </div>
                         <div class="col-9">
                           <div class="big-img">
-                            <div class="big-img_block"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="product image"></div>
+                            <div class="big-img_block" id="imagy">
+
+
+
+                           <!--<img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="product image">
+                            --></div>
                             </div>
                         </div>
                       </div>
@@ -532,6 +514,9 @@
     <script src="assets/js/numscroller-1.0.js"></script>
     <script src="assets/js/vanilla-tilt.min.js"></script>
     <script src="assets/js/main.js"></script>
+
+
+    <script type="text/javascript" src="assets/js/foodlist.js"></script>
 
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
