--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -212,10 +212,12 @@
                         </div>
                         <div class="col-9">
                           <div class="big-img">
-                            <div class="big-img_block" id="imagy">
+                            <div class="big-img_block">
 
-                           <!--<img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="product image">
-                            --></div>
+
+
+                            <img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="product image">
+                            </div>
                             </div>
                         </div>
                       </div>
@@ -513,8 +515,7 @@
     <script src="assets/js/vanilla-tilt.min.js"></script>
     <script src="assets/js/main.js"></script>
 
-
-    <script type="text/javascript" src="assets/js/foodlist.js"></script>
+    
 
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
