--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -212,12 +212,10 @@
                         </div>
                         <div class="col-9">
                           <div class="big-img">
-                            <div class="big-img_block">
+                            <div class="big-img_block" id="imagy">
 
-
-
-                            <img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="product image">
-                            </div>
+                            <!--<img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="product image">
+                            --></div>
                             </div>
                         </div>
                       </div>
@@ -520,5 +518,7 @@
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
+
+    <script type="text/javascript" src="assets/js/foodlist.js"></script>
   </body>
 </html>
