integrating user registration API

--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -212,7 +212,10 @@
                         </div>
                         <div class="col-9">
                           <div class="big-img">
-                            <div class="big-img_block" id="imagy">
+                            <div class="big-img_block">
+
+                            <img src="" alt="product image" id="imagy">
+                           
 
                             <!--<img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="product image">
                             --></div>
