--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -207,7 +207,7 @@
                       <div class="row">
                         <div class="col-3">
                           <div class="slide-img" data-slick="{&quot;vertical&quot;: true}">
-                            <div class="slide-img_block"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="product image"></div>
+                            <div class="slide-img_block"><img src="" alt="product image" id="imagy"></div>
                             </div>
                         </div>
                         <div class="col-9">
@@ -522,6 +522,6 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
 
-    <script type="text/javascript" src="assets/js/foodlist.js"></script>
+   
   </body>
 </html>
