--- a/register.html
+++ b/register.html
@@ -269,8 +269,8 @@
 
     <script type="text/javascript" src="assets/js/formvalidationRegistration.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script type="text/javascript" src="assets/js/materialize.min.js"></script>
+   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+--><script type="text/javascript" src="assets/js/materialize.min.js"></script>
     <script type="text/javascript" src="assets/js/materialize.js"></script>
 
  
