integrating user registration API

--- a/register.html
+++ b/register.html
@@ -176,6 +176,7 @@
                 <label for="gender">Gender</label>
 
                 <select class="no-round-input" id="gender" type="text" name="gender"> 
+                  <option> Select Gender</option>
                   <option value="Male" id="Male" name="Male"> Male </option>
                   <option value="Female" id="Female" name="Female"> Female </option>
                 </select>
