--- a/register.html
+++ b/register.html
@@ -148,6 +148,9 @@
           <div class="row">
             <div class="col-12 col-md-6 mx-auto" id="containerr">
               <h1 class="title">Register</h1>
+
+
+              
                 <form id="form" method="post" novalidate>
                 <label for="user-name">Fullname</label>
                 <input class="no-round-input" id="fullname" type="text" name="fullname" onfocusout="validatefullname()">
@@ -182,7 +185,7 @@
                 </select>
               
                 <div class="account-function">
-                  <button class="no-round-btn" type="submit">Register</button><a class="create-account" href="login.html">Or login</a>
+                  <button class="no-round-btn" type="submit" onClick="myFunction()">Register</button><a class="create-account" href="login.html">Or login</a>
                 </div>
               </form>
             </div>
@@ -251,6 +254,14 @@
       </footer>
       <!-- End footer-->
     </div>
+
+    <script>
+    function myFunction() {
+      window.location.href="http://programminghead.com";
+    }
+
+    </script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/js/jquery-ui.min.js"></script>
     <script src="assets/js/jquery.countdown.min.js"></script>
@@ -271,8 +282,9 @@
     <script type="text/javascript" src="assets/js/formvalidationRegistration.js"></script>
 
    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
---><script type="text/javascript" src="assets/js/materialize.min.js"></script>
+--> <script type="text/javascript" src="assets/js/materialize.min.js"></script>
     <script type="text/javascript" src="assets/js/materialize.js"></script>
+   
 
  
 
