--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script>
     function myFunction() {
-      window.location.href="http://programminghead.com";
+      window.location.href="/index.html";
     }
 
     </script>
