integrating user registration API

--- a/register.html
+++ b/register.html
@@ -21,12 +21,7 @@
     <link rel="stylesheet" href="assets/css/materialize.min.css">
   
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script>
-    function myFunction() {
-      window.location.href="/index.html";
-    }
-
-    </script>
+    
   </head>
 
     <div id="main">
@@ -187,7 +182,7 @@
                 </select>
               
                 <div class="account-function">
-                  <button class="no-round-btn" type="submit" onClick="myFunction()">Register</button><a class="create-account" href="login.html">Or login</a>
+                  <button class="no-round-btn" type="submit">Register</button><a class="create-account" href="login.html">Or login</a>
                 </div>
               </form>
             </div>
