--- a/login.html
+++ b/login.html
@@ -20,6 +20,12 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="assets/css/materialize.css">
     <link rel="stylesheet" href="assets/css/materialize.min.css">
+    <script>
+    function myFunction() {
+      window.location.href="/index.html";
+    }
+
+    </script>
   
    
   </head>
@@ -193,7 +199,7 @@
                   <div class="account-forgot"><a href="#">Forget your Password</a></div>
                 </div>
                 <div class="account-function">
-                  <a href="/index.html"><button class="no-round-btn" type="submit">Sign in</button></a><a class="create-account" href="register.html">Or create an account</a>
+                  <a href="/index.html"><button class="no-round-btn" type="submit" onClick="myFunction()">Sign in</button></a><a class="create-account" href="register.html">Or create an account</a>
                 </div>
               </form>
             </div>
