integrating user registration API

--- a/login.html
+++ b/login.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
     <script>
     function myFunction() {
+      //if conditio
       window.location.href="/index.html";
     }
 
