--- a/login.html
+++ b/login.html
@@ -376,7 +376,7 @@
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
                   <div class="footer-quicklink">
-                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
+                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shopcart.html">Shopping cart</a><a href="shop.html">Shop</a>
                   </div>
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
