integrating user registration API

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
               </div>
               <div class="col-3">
                 <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="wishlist.html"></a><a class="function-icon icon_bag_alt" href="shopcart.html"></a></div>
+                <!--shop_shop_cart.html-->
               </div>
             </div>
           </div>
