integrating user registration API

--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
                   <div class="row align-items-center justify-content-center">
                     <div class="col-12 col-md-5 col-xl-6">
                       <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
-                        <h5 data-animation="fadeInUp" data-delay=".2s">Fruit Fresh</h5>
+                      <!-- <h5 data-animation="fadeInUp" data-delay=".2s">Fruit Fresh</h5>
                         <h1 data-animation="fadeInUp" data-delay=".3s">Orange Lemon</h1>
                         <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">Shop now</a>
-                      </div>
+                     --> </div>
                     </div>
                     <div class="col-12 col-md-6">
                       <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img src="assets/images/homepage01/slider_subbackground_1.png" alt="">
@@ -209,10 +209,10 @@
                   <div class="row align-items-center justify-content-center">
                     <div class="col-12 col-md-5 col-xl-6">
                       <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
-                        <h5 data-animation="fadeInUp" data-delay=".2s">Butter Egg</h5>
+                        <!--<h5 data-animation="fadeInUp" data-delay=".2s">Butter Egg</h5>
                         <h1 data-animation="fadeInUp" data-delay=".3s">Orange Lemon</h1>
                         <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">Shop now</a>
-                      </div>
+                     --> </div>
                     </div>
                     <div class="col-12 col-md-6">
                       <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img" src="assets/images/homepage01/slider_img_2.png" alt=""></div>
@@ -227,10 +227,10 @@
                   <div class="row align-items-center justify-content-center">
                     <div class="col-12 col-md-5 col-xl-6">
                       <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
-                        <h5 data-animation="fadeInUp" data-delay=".2s">Fruit Fresh</h5>
+                        <!--<h5 data-animation="fadeInUp" data-delay=".2s">Fruit Fresh</h5>
                         <h1 data-animation="fadeInUp" data-delay=".3s">Orange Lemon</h1>
                         <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">Shop now</a>
-                      </div>
+                      --></div>
                     </div>
                     <div class="col-12 col-md-6">
                       <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img" src="assets/images/homepage01/slider_img_1.png" alt=""></div>
