integrating user registration API

--- a/homepage02.html
+++ b/homepage02.html
@@ -83,7 +83,7 @@
                           <ul class="sub-menu">
                             <li><a href="login.html">login</a></li>
                             <li><a href="register.html">register</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="FAQ.html">FAQ</a></li>
                             <li><a href="coming_soon.html">coming soon</a></li>
                             <li><a href="about_us.html">about us</a></li>
                             <li><a href="contact_us.html">contact us</a></li>
@@ -167,7 +167,7 @@
                       <ul class="sub-menu">
                         <li><a href="login.html">login</a></li>
                         <li><a href="register.html">register</a></li>
-                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="FAQ.html">FAQ</a></li>
                         <li><a href="coming_soon.html">coming soon</a></li>
                         <li><a href="contact_us.html">contact us</a></li>
                         <li><a href="404_error.html">404 error</a></li>
