--- a/about_us.html
+++ b/about_us.html
@@ -95,7 +95,7 @@
                           <ul class="sub-menu">
                             <li><a href="login.html">login</a></li>
                             <li><a href="register.html">register</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="FAQ.html">FAQ</a></li>
                             <li><a href="coming_soon.html">coming soon</a></li>
                             <li><a href="about_us.html">about us</a></li>
                             <li><a href="contact_us.html">contact us</a></li>
