integrating user registration API

--- a/shop.html
+++ b/shop.html
@@ -149,7 +149,7 @@
                 <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
               </div>
               <div class="col-3">
-                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
+                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
               </div>
             </div>
           </div>
@@ -752,17 +752,17 @@
               <div class="row">
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
                   <div class="footer-quicklink">
-                    <h5>Infomation</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact.html">Contact</a><a href="about_us.html">Service</a>
+                    <h5>Infomation</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
                   </div>
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
                   <div class="footer-quicklink">
-                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
+                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact_us.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                   </div>
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
                   <div class="footer-quicklink">
-                    <h5>Quick Shop</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact.html">Contact</a><a href="about_us.html">Service</a>
+                    <h5>Quick Shop</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
                   </div>
                 </div>
               </div>
