--- a/homepage02.html
+++ b/homepage02.html
@@ -104,7 +104,7 @@
                 <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
               </div>
               <div class="col-3">
-                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
+                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
               </div>
             </div>
           </div>
@@ -2165,17 +2165,17 @@
                 <div class="row no-gutters justify-content-md-center justify-content-lg-between">
                   <div class="col-12 col-sm-4 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
                     <div class="footer-quicklink">
-                      <h5>Infomation</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact.html">Contact</a><a href="about_us.html">Service</a>
+                      <h5>Infomation</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
                     </div>
                   </div>
                   <div class="col-12 col-sm-4 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
                     <div class="footer-quicklink">
-                      <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
+                      <h5>My Account</h5><a href="login.html">My Account</a><a href="contact_us.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                     </div>
                   </div>
                   <div class="col-12 col-sm-4 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
                     <div class="footer-quicklink">
-                      <h5>Quick Shop</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact.html">Contact</a><a href="about_us.html">Service</a>
+                      <h5>Quick Shop</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
                     </div>
                   </div>
                   <div class="col-12 col-md-8 col-lg-8 col-xl-6 col-xxl-3 text-sm-center text-lg-left">
