--- a/userwelcome.html
+++ b/userwelcome.html
@@ -777,17 +777,17 @@
             <div class="row">
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
                 <div class="footer-quicklink">
-                    <h5>Infomation</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact.html">Contact</a><a href="about_us.html">Service</a>
+                    <h5>Infomation</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
                 </div>
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
                 <div class="footer-quicklink">
-                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
+                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact_us.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                 </div>
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
                 <div class="footer-quicklink">
-                    <h5>Quick Shop</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact.html">Contact</a><a href="about_us.html">Service</a>
+                    <h5>Quick Shop</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
                 </div>
                 </div>
             </div>
