--- a/contact_us.html
+++ b/contact_us.html
@@ -100,38 +100,13 @@
                       <ul class="mb-0 d-flex flex-column">
                         <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
-                            <li><a href="index.html">Homepage 1</a></li>
-                            <li><a href="homepage02.html">Homepage 2</a></li>
-                            <li><a href="homepage03.html">Homepage 3</a></li>
-                            <li><a href="homepage04.html">Homepage 4</a></li>
-                            <li><a href="homepage05.html">Homepage 5</a></li>
-                          </ul>
+                                         </ul>
                         </li>
                         <li class="toggleable"><a class="menu-item" href="shop.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
-                            <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
-                            <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                            <li><a href="shop.html">shop grid 3 column</a></li>
-                            <li><a href="shop.html">shop list 3 column</a></li>
-                            <li><a href="shop_detail.html">shop detail</a></li>
-                            <li><a href="shop_detail_fullwidth.html">shop detail fullwidth</a></li>
-                            <li><a href="shop_checkout.html">checkout</a></li>
-                            <li><a href="shop_order_complete.html">order complete</a></li>
-                            <li><a href="shop_wishlist.html">wishlist</a></li>
-                            <li><a href="shop_compare.html">compare</a></li>
-                            <li><a href="shop_cart.html">cart</a></li>
-                          </ul>
+                                         </ul>
                         </li>
-                        <li class="toggleable"> <a class="menu-item" href="blog_list_sidebar.html">Blog</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
-                          <ul class="sub-menu">
-                            <li><a href="blog_list_sidebar.html">Blog List Sidebar</a></li>
-                            <li><a href="blog_grid_2col.html">Blog Grid 2 column</a></li>
-                            <li><a href="blog_grid_sidebar.html">Blog Grid sidebar</a></li>
-                            <li><a href="blog_masonry.html">Blog masonry</a></li>
-                            <li><a href="blog_grid_1col.html">Blog Grid 1 column sidebar</a></li>
-                            <li><a href="blog_detail_sidebar.html">Blog detail sidebar</a></li>
-                          </ul>
-                        </li>
+                       
                         <li class="toggleable"><a class="menu-item" href="#">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="login.html">login</a></li>
@@ -228,8 +203,7 @@
               <div class="col-12 col-md-4">
                 <div class="method-block"><i class="icon_pin_alt"></i>
                   <div class="method-block_text">
-                    <p>60-49 Road 11378 </p>
-                    <p>New York</p>
+                  <p>Address: S01, Pathfield mall, Beside Rainoil Filling Station, 4th Avenue,Gwarimpa, Abuja, F.C.T</p>
                   </div>
                 </div>
               </div>
