integrating user registration API

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
               </div>
               <div class="col-3">
-                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shopcart.html"></a></div>
+                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
                 <!--shop_shop_cart.html-->
               </div>
             </div>
@@ -376,7 +376,7 @@
                           <div class="product-description" data-name="Wine #1" data-price="5">
                             <h3 class="product-name">Wine #1</h3>
                             <p class="product-price">&euro; 5</p>
-                            <form class="add-to-cart" action="shopcart.html" method="post">
+                            <form class="add-to-cart" action="shop_cart.html" method="post">
                               <div>
                                 <label for="qty-1">Quantity</label>
                                 <input type="text" name="qty-1" id="qty-1" class="qty" value="1" />
@@ -410,7 +410,7 @@
                           <div class="product-description" data-name="Wine #3" data-price="11">
                             <h3 class="product-name">Wine #3</h3>
                             <p class="product-price">&euro; 11</p>
-                            <form class="add-to-cart" action="shopcart.html" method="post">
+                            <form class="add-to-cart" action="shop_cart.html" method="post">
                               <div>
                                 <label for="qty-3">Quantity</label>
                                 <input type="text" name="qty-3" id="qty-3" class="qty" value="1" />
@@ -1208,7 +1208,7 @@
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
                   <div class="footer-quicklink">
-                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact_us.html">Contact</a><a href="shopcart.html">Shopping cart</a><a href="shop.html">Shop</a>
+                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact_us.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                   </div>
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
