--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -86,7 +86,7 @@
                   <li><a href="shop_order_complete.html">order complete</a></li>
                   <li><a href="shop_wishlist.html">wishlist</a></li>
                   <li><a href="shop_compare.html">compare</a></li>
-                  <li><a href="shopcart.html">cart</a></li>
+                  <li><a href="_">cart</a></li>
                 </div>
               </ul>
             </li>
@@ -156,7 +156,7 @@
         <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
       </div>
       <div class="col-3">
-        <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shopcart.html"></a></div>
+        <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
       </div>
     </div>
   </div>
@@ -172,7 +172,7 @@
   </header> -->
   <div id="content">
     <h4>Your Shopping Cart</h4>
-    <form id="shopping-cart" action="shopcart.html" method="post">
+    <form id="shopping-cart" action="_" method="post">
       <table class="shopping-cart">
         <thead>
         <tr>
